@@ -1,0 +1,20 @@
+{
+  "backup_data_uid": "ed384a7ad7223703",
+  "backup_module_uid": "1dc07ee0f4742028",
+  "backup_module_uoa": "package",
+  "control": {
+    "author": "cTuning foundation",
+    "author_email": "admin@cTuning.org",
+    "author_webpage": "http://cTuning.org",
+    "copyright": "See CK COPYRIGHT.txt for copyright details",
+    "engine": "CK",
+    "iso_datetime": "2021-08-06T14:37:22.191553",
+    "license": "See CK LICENSE.txt for licensing details",
+    "version": [
+      "2",
+      "5",
+      "8"
+    ]
+  },
+  "data_name": "lib-python-tensorflow"
+}
